--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 * {
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Arvo", serif;
 }
 
 /*header*/
 header {
   background-color: rgb(31, 102, 150);
+}
+
+/*navbar*/
+.navbarlogo {
+  margin-right: 15px;
+}
+
+.navbarpages {
+  text-align: center;
 }
 
 /*footer*/
