--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ header {
   text-align: center;
 }
 
+.sectionbody {
+  background-color: rgb(133, 187, 235);
+}
+
 /*footer*/
 footer {
   background-color: rgb(0, 27, 65);
@@ -46,6 +50,10 @@ footer {
     transform: none;
   }
 }
+.iconosfooter {
+  margin-left: 15px;
+}
+
 .article-index {
   margin-bottom: 75px;
 }
