--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,3 +1,22 @@
 .article-contacto {
   margin-bottom: 115px;
+  margin-top: 75px;
+}
+.form-info {
+  background-color: rgb(72, 117, 175);
+  border: solid;
+}
+input {
+  background-color: rgb(182, 177, 177);
+}
+textarea {
+  background-color: rgb(182, 177, 177);
+}
+select {
+  background-color: rgb(182, 177, 177);
+}
+.input-button {
+  border: none;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
